--- a/slothy/test/frontend/web/base.html
+++ b/slothy/test/frontend/web/base.html
@@ -2,7 +2,7 @@
 <head>
     <script src="/static/jquery-3.5.1.min.js"></script>
     <script src="/static/nunjucks.js"></script>
-    <script src="/static/api.js"></script>
+    <script src="/static/slothy.js"></script>
 </head>
 <body>
 </body>
