--- a/slothy/test/frontend/web/base.html
+++ b/slothy/test/frontend/web/base.html
@@ -6,10 +6,8 @@
 </head>
 <body>
 </body>
-
 <script>
     var api = Api('localhost', 8000);
-    api.template = '{{ template }}';
+    api.execute();
 </script>
-<script src="{{ src }}"></script>
 </html>
