--- a/slothy/test/frontend/test/index.html
+++ b/slothy/test/frontend/test/index.html
@@ -14,7 +14,7 @@
 </div>
 <button onclick="app.reload('#usuarios')">Recarregar</button>
 
-<form id="form" action="app.base.usuario.add" data-reload="#usuarios" data-redirect2="/">
+<form id="form" action="app.base.usuario.add" data-reload="#usuarios" data-redirect2="/" novalidate class="slothy"  enctype="multipart/form-data">
   Nome <input type="text" name="nome">
   E-mail <input type="text" name="email">
   Foto <input type="file" name="foto">
