--- a/slothy/test/frontend/pages/test/index.html
+++ b/slothy/test/frontend/pages/test/index.html
@@ -1,4 +1,4 @@
-{% import "static/macros/macros.html" as macros %}
+{% import "macros/macros.html" as macros %}
 
 <h1>Great!! :D</h1>
 
@@ -8,7 +8,7 @@
 <div id="usuarios">
   <ul>
   {% for usuario in usuarios %}
-    <li>{{ usuario.nome }}</li>
+    <li>{{ usuario.nome }} <img width="30" src="http://localhost:8000/media/{{ usuario.foto }}"> </li>
   {% endfor %}
   </ul>
 </div>
