--- a/slothy/test/frontend/pages/index.html
+++ b/slothy/test/frontend/pages/index.html
@@ -1,1 +1,6 @@
 <h1>Hello {{ world }}!</h1>
+<div id="time">
+    {{ currentDate() }}
+</div>
+
+<button onclick="app.reload('#time')">Update Time</button>
