--- a/slothy/test/frontend/pages/test/index.html
+++ b/slothy/test/frontend/pages/test/index.html
@@ -8,7 +8,7 @@
 <div id="usuarios">
   <ul>
   {% for usuario in usuarios %}
-    <li>{{ usuario.nome }} <img width="30" src="http://localhost:8000/media/{{ usuario.foto }}"> </li>
+    <li>{{ usuario|json }} <img width="30" src="http://localhost:8000/media/{{ usuario.foto }}"> </li>
   {% endfor %}
   </ul>
 </div>
