--- a/slothy/test/frontend/pages/base.html
+++ b/slothy/test/frontend/pages/base.html
@@ -1,12 +1,32 @@
 <html>
 <head>
+    <title>Project</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-startup-image" href="/images/favicon.ico"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.cookie.js"></script>
     <script src="/js/nunjucks.js"></script>
     <script src="/js/slothy.js"></script>
+    <script src="/js/slothy.js"></script>
+    <script src="/components/library.js"></script>
 
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <script src="/js/google-charts.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+
+    <style>
+        body{margin:20px}
+    </style>
 </head>
 <body>
 </body>
