--- a/slothy/test/frontend/pages/index.html
+++ b/slothy/test/frontend/pages/index.html
@@ -1,6 +1,24 @@
+<style>
+    .component{width: 400px; height: 300px}
+</style>
+
+
 <h1>Hello {{ world }}!</h1>
+
+<h2>Current Time</h2>
 <div id="time">
     {{ currentDate() }}
 </div>
+<button class="btn btn-primary" onclick="app.reload('#time')">Update Time</button>
 
-<button onclick="app.reload('#time')">Update Time</button>
+<div class="component">
+  {{ map }}
+</div>
+
+<div>
+    {{ timeline1 }}
+</div>
+
+<div class="component">
+    {{ timeline2 }}
+</div>
