--- a/slothy/test/frontend/pages/base.html
+++ b/slothy/test/frontend/pages/base.html
@@ -17,8 +17,9 @@
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.cookie.js"></script>
     <script src="/js/nunjucks.js"></script>
+    <script src="/js/templates.js"></script>
     <script src="/js/slothy.js"></script>
-    <script src="/js/slothy.js"></script>
+
     <script src="/components/library.js"></script>
 
     <script src="/js/google-charts.js"></script>
