--- a/slothy/test/frontend/pages/index.html
+++ b/slothy/test/frontend/pages/index.html
@@ -5,11 +5,14 @@
 
 <h1>Hello {{ world }}!</h1>
 
-<h2>Current Time</h2>
-<div id="time">
-    {{ currentDate() }}
-</div>
-<button class="btn btn-primary" onclick="app.reload('#time')">Update Time</button>
+{% block time %}
+    <h2>Current Time</h2>
+    <div>
+        {{ currentDate() }}
+    </div>
+{% endblock %}
+
+<button class="btn btn-primary" onclick="app.reload('time')">Update Time</button>
 
 <div class="component">
   {{ map }}
