--- a/slothy/test/frontend/pages/base.html
+++ b/slothy/test/frontend/pages/base.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-startup-image" href="/images/favicon.ico"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
 
     <script src="/js/jquery-3.5.1.min.js"></script>
@@ -25,9 +26,6 @@
     <script src="/js/google-charts.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
-    <style>
-        body{margin:20px}
-    </style>
 </head>
 <body>
 </body>
