--- a/slothy/test/frontend/pages/index.html
+++ b/slothy/test/frontend/pages/index.html
@@ -1,8 +1,3 @@
-<style>
-    .component{width: 400px; height: 300px}
-</style>
-
-
 <h1>Hello {{ world }}!</h1>
 
 {% block time %}
@@ -14,7 +9,7 @@
 
 <button class="btn btn-primary" onclick="app.reload('time')">Update Time</button>
 
-<div class="component">
+<div style="width: 400px; height: 300px">
   {{ map }}
 </div>
 
@@ -22,6 +17,6 @@
     {{ timeline1 }}
 </div>
 
-<div class="component">
+<div style="width: 400px">
     {{ timeline2 }}
 </div>
