--- a/slothy/test/frontend/pages/test/index.html
+++ b/slothy/test/frontend/pages/test/index.html
@@ -1,23 +1,22 @@
-{% import "macros/macros.html" as macros %}
-
 <h1>Great!! :D</h1>
 
 <h2>{{ title }}</h2>
 
 {% block usuarios %}
-  <ul>
-  {% for usuario in usuarios() %}
-    <li>{{ usuario.nome }} <img width="30" src="http://localhost:8000/media/{{ usuario.foto }}"> </li>
-  {% endfor %}
-  </ul>
+<ul>
+    {% for usuario in usuarios() %}
+    <li>{{ usuario.nome }} <img width="30" src="http://localhost:8000/media/{{ usuario.foto }}"></li>
+    {% endfor %}
+</ul>
 {% endblock %}
 <button class="btn btn-primary" onclick="app.reload('usuarios')">Recarregar</button>
 
-<form id="form" action="app.base.usuario.add" data-reload="usuarios" data-redirect2="/" novalidate class="slothy"  enctype="multipart/form-data">
-  Nome <input type="text" name="nome">
-  E-mail <input type="text" name="email">
-  Foto <input type="file" name="foto">
-  <button class="btn btn-primary" type="submit">Cadastrar</button>
+<form id="form" action="app.base.usuario.add" data-reload="usuarios" data-redirect2="/" novalidate class="slothy"
+      enctype="multipart/form-data">
+    Nome <input type="text" name="nome">
+    E-mail <input type="text" name="email">
+    Foto <input type="file" name="foto">
+    <button class="btn btn-primary" type="submit">Cadastrar</button>
 </form>
 
 
