--- a/slothy/test/frontend/pages/base.html
+++ b/slothy/test/frontend/pages/base.html
@@ -17,6 +17,7 @@
 
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.cookie.js"></script>
+    <script src="/js/html2pdf.bundle.min.js"></script>
     <script src="/js/nunjucks.js"></script>
     <script src="/js/templates.js?v1"></script>
     <script src="/js/slothy.js"></script>
