--- a/slothy/test/frontend/pages/base.html
+++ b/slothy/test/frontend/pages/base.html
@@ -22,7 +22,7 @@
     <script src="/js/templates.js?v1"></script>
     <script src="/js/slothy.js"></script>
 
-    <script src="/components/library.js"></script>
+    <script src="/components/components.js"></script>
 
     <script src="/js/google-charts.js"></script>
     <script src="/js/bootstrap.min.js"></script>
