--- a/slothy/test/frontend/pages/index.html
+++ b/slothy/test/frontend/pages/index.html
@@ -20,3 +20,5 @@
 <div style="width: 400px">
     {{ timeline2 }}
 </div>
+
+<button onclick="printReport()" class="btn btn-primary">Print Report</button>
