--- a/slothy/test/frontend/pages/report.html
+++ b/slothy/test/frontend/pages/report.html
@@ -1,46 +1,4 @@
-<style type="text/css">
-      .before {
-        page-break-before: always;
-      }
-      .after {
-        page-break-after: always;
-      }
-      .avoid {
-        page-break-inside: avoid;
-      }
-      table {
-        border-collapse: collapse;
-      }
-      thead {
-        display: table-header-group;
-      }
-      thead th{
-        font-weight: bold;
-        background-color:#EEE;
-      }
-      tr, td {
-        page-break-inside: avoid;
-      }
-      .bold {
-        font-weight: bold;
-      }
-      table{
-        width: 100%;
-      }
-      table.info,  table.info th,  table.info td, table.data {
-          border: 0px;
-      }
-      .page-break {
-	    page-break-before: always;
-	  }
-	  table.data th, table.data td{
-	    border: solid 1px black;
-	  }
-</style>
-
-
-<div id="root2">
-
+<div>
     <h1>Relatório</h1>
     <div>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of
@@ -49,6 +7,7 @@
         text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
         industry.
     </div>
+
     <h3>Dados Pessoais</h3>
     <table class="info">
         <tr>
@@ -62,6 +21,7 @@
             <td>01/01/2020</td>
         </tr>
     </table>
+
     <h3>Endereço</h3>
     <table class="info">
         <tr>
@@ -82,7 +42,6 @@
         </tr>
     </table>
 
-    <img src="/images/sample.jpg" alt="" width="0" height="0">
     <h3>Itens</h3>
     <table class="data">
         <thead>
