--- a/slothy/test/frontend/pages/test/index.html
+++ b/slothy/test/frontend/pages/test/index.html
@@ -9,7 +9,7 @@
     {% endfor %}
 </ul>
 {% endblock %}
-<button class="btn btn-primary" onclick="app.reload('usuarios')">Recarregar</button>
+<button class="btn btn-primary" onclick="reload('usuarios')">Recarregar</button>
 
 <form id="form" action="app.base.usuario.add" data-reload="usuarios" data-redirect2="/" novalidate class="slothy"
       enctype="multipart/form-data">
